Make sure grid is aligned to the center

--- a/styles/components/_grid.scss
+++ b/styles/components/_grid.scss
@@ -1,4 +1,5 @@
 .grid {
+  margin: 0 auto;
   max-width: $max-width;
   width: 100%;
   padding: 0 $base-spacing-unit;
